# kalshi-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: orderbook.rs
examples/: demo_test.rs  find_active.rs  websocket_live.rs
src/: config.rs  error.rs  lib.rs
src/client/: auth.rs  mod.rs  rest.rs  websocket.rs
src/orderbook/: book.rs  manager.rs  mod.rs
src/types/: fixed_point.rs  market.rs  messages.rs  mod.rs  order.rs
tests/: integration_rest.rs  integration_websocket.rs
